--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "rimraf": "^3.0.0",
     "solc": "0.6.6",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "tslib": "^2.0.0",
+    "@harmony-js/core": "^0.1.50",
+    "dotenv": "^8.2.0"
   },
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
