--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "@uniswap/v2-periphery",
-  "version": "1.1.0-beta.0",
+  "name": "@harmony-swoop/periphery",
+  "version": "1.1.0",
   "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
   "engines": {
     "node": ">=10"
   },
-  "homepage": "https://uniswap.org",
+  "homepage": "https://swoop.demo.harmony.one",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/uniswap-v2-periphery"
+    "url": "https://github.com/harmony-one/swoop-periphery"
   },
   "files": [
     "build",
     "contracts"
   ],
   "dependencies": {
-    "@uniswap/lib": "1.1.1",
-    "@uniswap/v2-core": "1.0.0"
+    "@harmony-swoop/lib": "1.1.4",
+    "@harmony-swoop/core": "1.1.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.6",
