--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "contracts"
   ],
   "dependencies": {
+    "@harmony-swoop/core": "1.1.1",
     "@harmony-swoop/lib": "1.1.4",
-    "@harmony-swoop/core": "1.1.1"
+    "@harmony-swoop/misc": "harmony-one/swoop-misc"
   },
   "devDependencies": {
+    "@harmony-js/core": "^0.1.50",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
     "ethereum-waffle": "^2.4.1",
     "ethereumjs-util": "^6.2.0",
     "mocha": "^6.2.2",
@@ -30,10 +33,8 @@
     "rimraf": "^3.0.0",
     "solc": "0.6.6",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.3",
     "tslib": "^2.0.0",
-    "@harmony-js/core": "^0.1.50",
-    "dotenv": "^8.2.0"
+    "typescript": "^3.7.3"
   },
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
