--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harmony-swoop/periphery",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
   "engines": {
     "node": ">=10"
@@ -14,14 +14,13 @@
     "build",
     "contracts"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@harmony-js/core": "^0.1.50",
-    "@harmony-swoop/utils": "^1.0.0",
     "@harmony-swoop/core": "^1.1.1",
     "@harmony-swoop/lib": "^1.1.4",
     "@harmony-swoop/misc": "^1.0.0",
+    "@harmony-swoop/utils": "^1.0.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
