--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harmony-swoop/periphery",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
   "engines": {
     "node": ">=10"
@@ -46,7 +46,8 @@
     "abi": "./scripts/abi.sh",
     "postcompile": "yarn abi && yarn copy-v1-artifacts",
     "pretest": "yarn compile",
-    "test": "mocha"
+    "test": "mocha",
+    "prepublishOnly": "yarn test"
   },
   "license": "GPL-3.0-or-later"
 }
