--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@harmony-swoop/periphery",
-  "version": "1.1.6",
+  "name": "@swoop-exchange/periphery",
+  "version": "1.0.0",
   "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
   "engines": {
     "node": ">=10"
@@ -17,10 +17,10 @@
   "dependencies": {},
   "devDependencies": {
     "@harmony-js/core": "^0.1.55",
-    "@harmony-swoop/core": "^1.1.6",
-    "@harmony-swoop/lib": "^1.1.7",
-    "@harmony-swoop/misc": "^1.0.1",
-    "@harmony-swoop/utils": "^1.0.4",
+    "@swoop-exchange/core": "^1.0.0",
+    "@swoop-exchange/lib": "^1.0.0",
+    "@swoop-exchange/misc": "^1.0.0",
+    "@swoop-exchange/utils": "^1.0.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
