--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swoop-exchange/periphery",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
   "engines": {
     "node": ">=10"
@@ -19,7 +19,7 @@
     "@harmony-js/core": "^0.1.55",
     "@swoop-exchange/core": "^1.1.0",
     "@swoop-exchange/lib": "^1.1.0",
-    "@swoop-exchange/misc": "^1.1.0",
+    "@swoop-exchange/misc": "1.1.1",
     "@swoop-exchange/utils": "^1.1.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
